Update DOM_V3 Improve debugger/registers

--- a/test/DOM_v3/web/debugger/registers.html
+++ b/test/DOM_v3/web/debugger/registers.html
@@ -9,11 +9,11 @@
     </tr>
   </thead>
   <tbody>
-    <tr id="debRegPC"><td>reg0</td><td>FFFF</td></tr>
-    <tr id="debRegAF"><td>reg1</td><td>FFFF</td></tr>
-    <tr id="debRegBC"><td>reg2</td><td>FFFF</td></tr>
-    <tr id="debRegDE"><td>reg3</td><td>FFFF</td></tr>
-    <tr id="debRegHL"><td>reg4</td><td>FFFF</td></tr>
-    <tr id="debRegSP"><td>reg5</td><td>FFFF</td></tr>
+    <tr><td>reg0</td><td>FFFF</td></tr>
+    <tr><td>reg1</td><td>FFFF</td></tr>
+    <tr><td>reg2</td><td>FFFF</td></tr>
+    <tr><td>reg3</td><td>FFFF</td></tr>
+    <tr><td>reg4</td><td>FFFF</td></tr>
+    <tr><td>reg5</td><td>FFFF</td></tr>
   </tbody>
 </table>
