--- a/test/DOM_v3/web/debugger/registers.html
+++ b/test/DOM_v3/web/debugger/registers.html
@@ -9,6 +9,12 @@
     </tr>
   </thead>
   <tbody>
+    <tr><td colspan="2">
+      <span class="label label-default"/>
+      <span class="label label-default"/>
+      <span class="label label-default"/>
+      <span class="label label-default"/>
+    </td></tr>
     <tr><td>reg0</td><td>FFFF</td></tr>
     <tr><td>reg1</td><td>FFFF</td></tr>
     <tr><td>reg2</td><td>FFFF</td></tr>
